<resources>
    <string name="app_name">TaskManager</string>
    <string name="app_sloan">Manage Your Tasks Easy</string>
    <string name="unknown_error">unknown error occurred, try again</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="btn_link_to_register">Not a member? Sign up now</string>
    <string name="userName">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="btn_link_to_login">Already registred! Login Me</string>
    <string name="data_not_exist">No Data Available</string>
    <string name="filter_list">filter list</string>
    <string name="user_welcome">hi, </string>

    //task
    <string name="create_date">create date: %s</string>
    <string name="reporter">reporter: %s</string>


    //validation
    <string name="enter_all_filed">enter all filed</string>
    <string name="email_not_valid">email not valid</string>
    <string name="password_not_valid">password not valid</string>
    <string name="this_field_is_required">this field is required</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">User Name</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>

    //taskDetail
    <string name="description">Description: </string>
    <string name="reporter_name">Reporter: </string>
    <string name="created_date">Created Date:</string>
    <string name="end_date">End Date:</string>
    <string name="status">status:</string>
    <string name="logged_time">Logged Time:</string>
    <string name="log_example">(eg. 2w 5d 12h)</string>
    <string name="log">Log:</string>
    <string name="add_description">description...</string>
    <string name="priority">Priority:</string>
    <string name="assign_to">Assign To:</string>
    <string name="high">high</string>
    <string name="todo">todo</string>
    <string name="in_progress">in progress</string>
    <string name="test">test</string>
    <string name="done">done</string>
    <string name="filter">filter</string>
    <string name="from_date">From Date:</string>
    <string name="to_date">to Date</string>
    <string name="remove_filter">remove filter</string>

</resources>